Updated security dependencies and implementation